alignement fixes in blog

--- a/css/blogs/default.css
+++ b/css/blogs/default.css
@@ -77,7 +77,10 @@ nav {
 
 @media screen and (max-width: 480px){
   #main {
-    margin: 30% 20% 0 10vw
+    margin: 30% 3vw 0 3vw;
+  }
+  .post {
+    text-align: center;
   }
   h1 {
     font-size: 7vw;
@@ -85,35 +88,42 @@ nav {
   }
   /* SUBTITLE */
   h2 {
-    font-size: 6vw;
+    font-size: 5vw;
     color: #101010;
 
   }
   .post .entry {
-    font-size: 6vw;
+    font-size: 5vw;
     line-height: normal;
+    font-weight: normal;
   }
   .post img {
     width: 70%;
+    margin: auto;
   }
 
 }
 @media screen and (min-width: 481px) and (max-width: 768px){
   #main {
-    margin: 30% 20% 0 10vw
+    margin: 30% 3vw 0 3vw;
   }
   h1 {
     font-size: 5vw;
     font-weight: bold;
   }
   h2 {
-    font-size: 4vw;
+    font-size: 3vw;
     color: #101010;
 
   }
   .post .entry {
     font-size: 2.5vw;
     line-height: normal;
+    font-weight: normal;
+
+  }
+  .post {
+    text-align: center;
   }
   .post img {
     width: 50%;
